[package]
name = "rmake"
version = "0.1.29"
authors = ["Irisawa Masaru <irisawa.masaru@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple task runner like make"
repository = "https://github.com/mass10/rmake/"
documentation = "https://docs.rs/crate/rmake/"
categories = ["command-line-utilities", "development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
toml = "^0.5"
chrono = "^0.4"

[[bin]]
name = "rmake"
test = false
doc = true
